--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,15 @@
             "name": "Jesús Espejo"
         }
     ],
-    "minimum-stability": "dev",
-    "require-dev":
-    {
+    "require-dev": {
         "illuminate/support": "~5.2"
     },
-    "require":
-    {
+    "require": {
         "php": ">=5.4.0"
+    },
+    "autoload": {
+        "psr-0": {
+            "HelloWorld": "src/"
+        }
     }
 }
