--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         "php": ">=5.4.0"
     },
     "autoload": {
-        "psr-0": {
-            "HelloWorld": "src/"
+        "psr-4": {
+            "Jespejo\\LaraRepo\\": "src"
         }
     }
 }
