--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         "illuminate/support": "~5.2"
     },
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.5.9"
     },
     "autoload": {
         "psr-4": {
-            "Jespejo\\LaraRepo\\": ""
+            "Jespejoh\\LaraRepo\\": ""
         }
     }
 }
